[gd_scene load_steps=5 format=3 uid="uid://cw24cwgg4cejw"]

[ext_resource type="Theme" uid="uid://k28fqq68cyrt" path="res://scenes/screens/default_theme.tres" id="1_q2hyr"]
[ext_resource type="Script" path="res://scenes/screens/level_select_screen.gd" id="2_1jfsw"]
[ext_resource type="Texture2D" uid="uid://c305axia7ks7r" path="res://assets/Backgrounds/White_Background.png" id="3_tcwyj"]

[sub_resource type="SystemFont" id="SystemFont_smwv8"]
font_names = PackedStringArray("Agency FB")
subpixel_positioning = 0

[node name="LevelSelectScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_q2hyr")
script = ExtResource("2_1jfsw")
dir_path = "res://scenes/levels"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_tcwyj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 64

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 12
theme_override_constants/outline_size = 24
theme_override_fonts/font = SubResource("SystemFont_smwv8")
theme_override_font_sizes/font_size = 120
text = "Select Level"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 3

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Tutorial"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "World1"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "World2"

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "World3"
